css/schedule.css
/* ... */
			#kompassi_schedule_dates .date-toggle.current.active::after {
				background-color: var(--kompassi-palette-2);
			}

/*
 *  Filters
 *
 */

#kompassi_schedule_filters {
	position: relative;
	display: none;
	margin-bottom: var(--kompassi-padding);
	color: #fff;
	background-color: var(--kompassi-palette-2);
	padding: var(--kompassi-padding);
	border-radius: var(--kompassi-radius);
	box-shadow: var(--kompassi-box-shadow);
}
	#kompassi_schedule_filters.visible {
		display: block;
	}
		#kompassi_schedule_filters > [class*="kompassi-icon"]::before {
			filter: invert();
		}
		#kompassi_schedule_filters > .input > input {
			width: calc(100% - var(--kompassi-padding) * 2);
		}
		#kompassi_schedule_filters > .select > * {
			display: inline-block;
			width: 100%;
		}
			#kompassi_schedule_filters :is(input, button) {
				padding: var(--kompassi-padding);
				color: #fff;
				background-color: hsl(0,0%,0%,0.2);
				border: none;
				border-radius: var(--kompassi-radius);
				font-family: var(--kompassi-font);
				font-size: 100%;
			}
				#kompassi_schedule_filters input::placeholder {
					color: #fff;
				}
				#kompassi_schedule_filters button {
					padding: 0.5em 2em 0.5em 0.5em;
					outline-color: #fff;
				}
					#kompassi_schedule_filters option {
						color: var(--kompassi-fg);
						background-color: var(--kompassi-bg);
					}
				#kompassi_schedule_filters input:not(:placeholder-shown),
				#kompassi_schedule_filters .kompassi-dropdown button.active {
					color: #222;
					background-color: hsl(0,0%,100%,80%);
				}
					#kompassi_schedule_filters .kompassi-dropdown button.active::after {
						filter: none;
					}

	#kompassi_schedule_filters.visible.has-filters-enabled {
		padding-bottom: calc( 1.5em + var(--kompassi-padding) * 2 );
	}
			#kompassi_schedule_filters .clear-filters {
				display: none;
				position: absolute;
				bottom: var(--kompassi-padding);
				left: var(--kompassi-padding);
				height: 1.5em;
				width: 100%;
			}
				#kompassi_schedule_filters.visible.has-filters-enabled .clear-filters {
					display: block;
				}
				#kompassi_schedule_filters.visible.has-filters-enabled .clear-filters::before {
					height: 100%;
				}

@container kompassi-integration (min-width: 700px) {
	#kompassi_schedule_filters.visible {
		display: grid;
		grid-template-columns: repeat(4, minmax(0, 1fr));
		grid-gap: var(--kompassi-padding);
	}
		#kompassi_schedule_filters.visible > *,
		#kompassi_schedule_filters.visible > .select > * {
			margin-right: 0;
			margin-bottom: 0;
			width: 100%;
			max-width: 100%;
		}
	#kompassi_schedule_filters.visible.has-filters-enabled {
		padding-right: calc( 1.5em + var(--kompassi-padding) * 2 );
		padding-bottom: var(--kompassi-padding);
	}
		#kompassi_schedule_filters .clear-filters {
			left: unset;
			bottom: unset;
			top: var(--kompassi-padding);
			right: var(--kompassi-padding);
			width: 1.5em;
			height: calc( 100% - var(--kompassi-padding) * 2 );
		}
		#kompassi_schedule_filters .clear-filters::before {
			width: 100%;
			margin-right: 0;
		}
		#kompassi_schedule_filters.visible.has-filters-enabled .clear-filters::after {
			display: none;
		}
}

/*
 *  Schedule
 *
 */

summary {
	list-style: none;
}
summary::marker {
	display: none;
}

.kompassi_schedule_wrapper {
	width: calc( 100% - 0.2em );
	padding: 0.2em;
	overflow: hidden;
	user-select: none;
	position: relative;
}

#kompassi_schedule article.filtered {
	display: none !important;
}

#kompassi_schedule article:hover {
	cursor: pointer;
}

/*  Default/common styles  */
#kompassi_schedule article::before {
	background-image: var(--kompassi-program-icon, var(--kompassi-program-icon-default));
	background-size: auto calc( 100% - 3em );
	background-position: 1.5em 50%;
	background-repeat: no-repeat;
}

#kompassi_schedule article .title {
	font-weight: bold;
	letter-spacing: 0.04em;
}

#kompassi_schedule article .actions > ::before {
	content: '';
	display: inline-block;
	width: var(--kompassi-icon-size);
	height: var(--kompassi-icon-size);
	background-position: 50% 50%;
	background-repeat: no-repeat;
	background-size: contain;

	padding: 0;
	margin: 0;
	transition: 100ms all;
}
	#kompassi_schedule article .actions > .favorite:hover::before {
		margin: -2px;
		padding: 2px;
	}

#kompassi_schedule .times span {
	white-space: nowrap;
}
[id^="kompassi"] .times .length {
	font-size: max(85%, 8pt);
	text-transform: none;
	color: var(--kompassi-fg-50);
	margin-left: 0.4em;
}

#kompassi_schedule article summary {
	outline: none;
}

#kompassi_schedule article .main {
	background-color: var(--kompassi-palette-5);
}

/*  Programs continuing  */
#kompassi_schedule:not([data-display="timeline"]) article.continues {
	order: 3;
}
#kompassi_schedule[data-display="timeline"].now article.continues {
/*	opacity: 0.5; */
/*	background-image: linear-gradient( to bottom, hsl(0,0%,60%), hsl(0,0%,75%) ); */
}

#kompassi_schedule:not([data-display="timeline"]) #kompassi_programs_continuing {
	order: 2;
}
	#kompassi_schedule[data-display="timeline"] #kompassi_programs_continuing {
		display: none;
	}

/*  Display Style: List  */
#kompassi_schedule[data-display="list"] {
	--kompassi-program-list-padding: 0.3em;
	--kompassi-program-list-visual-width: 12px;

	display: grid;
	grid-template-columns: repeat(1,1fr);
	grid-gap: 0.5em;
}
	#kompassi_schedule[data-display="list"] article {
		position: relative;
		padding-left: calc( var(--kompassi-program-list-visual-width) );
		color: var(--kompassi-fg);
		background-color: var(--kompassi-bg);
		box-shadow: var(--kompassi-box-shadow);
		border-radius: var(--kompassi-radius);
	}
/* ... */

